[package]
name = "let_object_emitter"
version = "0.1.0"
edition = "2021"

[dependencies]
let_result = { version = "0.1.0", path = "../let_result" }
let_emitter = { version = "0.1.0", path = "../let_emitter" }
let_opcodes = { version = "0.1.0", path = "../let_opcodes" }
let_module = { version = "0.1.0", path = "../let_module" }
