[package]
name = "leti"
version = "0.1.0"
edition = "2021"

[dependencies]
let_result = { version = "0.1.0", path = "../let_result" }
let_module = { version = "0.1.0", path = "../let_module" }
let_emitter = { version = "0.1.0", path = "../let_emitter" }
let_parser = { version = "0.1.0", path = "../let_parser" }
read_iter = { version = "0.1.0", path = "../read_iter" }
let_vm = { version = "0.1.0", path = "../let_vm" }
