[package]
name = "letr"
version = "0.1.0"
edition = "2021"

[dependencies]
let_result = { version = "0.1.0", path = "../let_result" }
let_opcodes = { version = "0.1.0", path = "../let_opcodes" }
let_module = { version = "0.1.0", path = "../let_module" }
let_vm = { version = "0.1.0", path = "../let_vm" }
